; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_addrconf.c_check_addr_gen_mode.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_addrconf.c_check_addr_gen_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IN6_ADDR_GEN_MODE_EUI64 = common dso_local global i32 0, align 4
@IN6_ADDR_GEN_MODE_NONE = common dso_local global i32 0, align 4
@IN6_ADDR_GEN_MODE_STABLE_PRIVACY = common dso_local global i32 0, align 4
@IN6_ADDR_GEN_MODE_RANDOM = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @check_addr_gen_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_addr_gen_mode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @IN6_ADDR_GEN_MODE_EUI64, align 4
  %6 = icmp ne i32 %4, %5
  br i1 %6, label %7, label %22

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @IN6_ADDR_GEN_MODE_NONE, align 4
  %10 = icmp ne i32 %8, %9
  br i1 %10, label %11, label %22

11:                                               ; preds = %7
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @IN6_ADDR_GEN_MODE_STABLE_PRIVACY, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %11
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @IN6_ADDR_GEN_MODE_RANDOM, align 4
  %18 = icmp ne i32 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %2, align 4
  br label %23

22:                                               ; preds = %15, %11, %7, %1
  store i32 1, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %19
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
